--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -78,16 +78,18 @@
                         </form>
                     {% endif %}
                     <ul class="nav navbar-nav navbar-right">
-                        {% if PREVIEW_WORKSHEETS %}
+                        {% if ENABLE_WORKSHEETS %}
                             <li class="{% active request '/worksheets/' %}{% active request '/bundles/' %}"><a href="/worksheets" tabIndex=2 target="_self">Worksheets</a></li>
                         {% endif %}
-                        <li class="{% active request '/my/' %}">
-                            {% if user.is_authenticated %}
-                                <a href="/my">Competitions</a>
-                            {% else %}
-                                <a href="/competitions/">Competitions</a>
-                            {% endif %}
-                        </li>
+                        {% if ENABLE_COMPETITIONS %}
+                          <li class="{% active request '/my/' %}">
+                              {% if user.is_authenticated %}
+                                  <a href="/my">Competitions</a>
+                              {% else %}
+                                  <a href="/competitions/">Competitions</a>
+                              {% endif %}
+                          </li>
+                        {% endif %}
                         <li><a href="https://github.com/codalab/codalab/wiki" target="_blank">Help</a></li>
                         {% if user.is_authenticated %}
                             <li class="dropdown {% active request '/accounts/' %}">
