--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -23,47 +23,53 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 worksheet-random-list">
-                <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                      <div class="btn-group" role="group">
-                            <a role="button" class="btn" href="{%if PREVIEW_WORKSHEETS %}/worksheets{% else %}#{% endif %}">Worksheets</a>
-                      </div>
-                </div>
-                <p><strong>Run reproducible experiments and create executable papers using worksheets.</strong></p>
-               <!-- <button type="button" class="btn btn-danger"><a href="{%if PREVIEW_WORKSHEETS %}/worksheets{% else %}#{% endif %}">Create an Experiment!</a></button>
-                <p>Run reproducible experiments and created executable papers using worksheets.</p>-->
-            </div>
-            <div class="col-sm-6 competition-latest-list">
-                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                      <div class="btn-group" role="group">
-                            <a role="button" class="btn" href="/competitions">Competitions</a>
-                      </div>
-                </div>
-                <p><strong>Enter an existing competition to solve challenging data problems, or host your own.</strong></p>
-            </div>
-            <div class="col-sm-6 worksheet-random-list">
-                <h2 class="homepage_headers">Example Worksheets</h2>
-                {% if not worksheets %}
-                <p><em>There are no worksheets.</em></p>
+            {% if ENABLE_WORKSHEETS %}
+              <div class="col-sm-6 worksheet-random-list">
+                  <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                        <div class="btn-group" role="group">
+                              <a role="button" class="btn" href="/worksheets">Worksheets</a>
+                        </div>
+                  </div>
+                  <p><strong>Run reproducible experiments and create executable papers using worksheets.</strong></p>
+              </div>
+            {% endif %}
+
+            {% if ENABLE_COMPETITIONS %}
+              <div class="col-sm-6 competition-latest-list">
+                   <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                        <div class="btn-group" role="group">
+                              <a role="button" class="btn" href="/competitions">Competitions</a>
+                        </div>
+                  </div>
+                  <p><strong>Enter an existing competition to solve challenging data problems, or host your own.</strong></p>
+              </div>
+            {% endif %}
+
+            {% if ENABLE_WORKSHEETS %}
+              <div class="col-sm-6 worksheet-random-list">
+                  <h2 class="homepage_headers">Example Worksheets</h2>
+                  {% if not worksheets %}
+                  <p><em>There are no worksheets.</em></p>
+                  {% else %}
+                      {% for worksheet in worksheets %}
+                          {% include "web/worksheets_latest.html" with worksheet=worksheet %}
+                      {% endfor %}
+                  {% endif %}
+              </div>
+            {% endif %}
+
+            {% if ENABLE_COMPETITIONS %}
+              <div class="col-sm-6 competition-latest-list">
+                <h2 class="homepage_headers">Latest Competitions</h2>
+                {% if not latest_competitions %}
+                <p><em>There are no competitions.</em></p>
                 {% else %}
-                    {% for worksheet in worksheets %}
-                        {% include "web/worksheets_latest.html" with worksheet=worksheet %}
+                    {% for competition in latest_competitions %}
+                        {% include "web/competition_latest.html" with competition=competition %}
                     {% endfor %}
                 {% endif %}
-
-
-            </div>
-            <div class="col-sm-6 competition-latest-list">
-            <h2 class="homepage_headers">Latest Competitions</h2>
-            {% if not latest_competitions %}
-            <p><em>There are no competitions.</em></p>
-        {% else %}
-            {% for competition in latest_competitions %}
-                {% include "web/competition_latest.html" with competition=competition %}
-            {% endfor %}
-        {% endif %}
-
-            </div>
+              </div>
+            {% endif %}
         </div>
     </div>
 {% endblock content %}
