Changing button colors for different states

--- a/codalab/apps/web/templates/web/my/submissions.html
+++ b/codalab/apps/web/templates/web/my/submissions.html
@@ -107,7 +107,7 @@
                         <td align="center"><button class="btn btn-danger btn-xs re_run_submission_button">RE-RUN</button></td>
                         {% if submission.is_in_leaderboard %}
                             {% if submission.is_migrated %}
-                            <td align="center"><button class="btn btn-danger btn-xs re_run_submission_button">MIGRATED</button></td>
+                            <td align="center"><button class="btn btn-primary btn-xs re_run_submission_button">MIGRATED</button></td>
                             {% else %}
                             <td align="center"><button class="btn btn-danger btn-xs re_run_submission_button">MIGRATE</button></td>
                             {% endif %}
