--- a/codalab/apps/web/templates/web/my/submissions.html
+++ b/codalab/apps/web/templates/web/my/submissions.html
@@ -105,7 +105,7 @@
                         </td>
                         <td align="center"><button class="btn btn-danger btn-xs mark_as_failed_button">FAILED</button></td>
                         <td align="center"><button class="btn btn-danger btn-xs re_run_submission_button">RE-RUN</button></td>
-                        {% if submission.is_in_leaderboard %}
+                        {% if submission.is_in_leaderboard and next_phase %}
                             {% if submission.is_migrated %}
                             <td align="center"><button class="btn btn-primary btn-xs re_run_submission_button">MIGRATED</button></td>
                             {% else %}
