Changing alert's message

--- a/codalab/apps/web/templates/web/my/submissions.html
+++ b/codalab/apps/web/templates/web/my/submissions.html
@@ -188,7 +188,7 @@
                 type: 'POST',
             })
             .done(function() {
-                alert("Migrating to next phase");
+                alert("Migrating to next phase, please refresh the page");
             })
             .fail(function() {
                 alert("Failed to migrate, try again later and if the problem persists contact an admin");
