- Expand the frontpage to have 'My Worksheet' and 'Browse Worksheets' if showing worksheets only. - Show random worksheets that have tags paper,software,data. - Point 'Help' to the appropriate Wiki page.

--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -9777,3 +9777,9 @@ textarea.table.affiliation > tbody > tr > td input {
 .terminal a:hover {
   color: red;
 }
+
+.frontpage_code {
+  font-family: monospace;
+  font-size: 14px;
+  color: #33aa33;
+}
