--- a/codalab/apps/web/templates/404.html
+++ b/codalab/apps/web/templates/404.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %}
+<h1>404</h1>
+Could not find the page you requested.
 
-{% block content %}
-    <h1>404</h1>
-    <h1>Could not find the page you requested.</h1>
-{% endblock %}
+If this is in error, please file a <a href="https://github.com/codalab/codalab/issues/new">bug report</a>.
+For more information about CodaLab, check out the <a href="https://github.com/codalab/codalab/wiki">wiki</a>.
