--- a/codalab/apps/web/templates/500.html
+++ b/codalab/apps/web/templates/500.html
@@ -1,3 +1,4 @@
-
 <h1>500</h1>
-<h1>Error processing the page. If the problem persists please contact your competition organizer or an admin.</h1>
+Internal server error.
+Please file a <a href="https://github.com/codalab/codalab/issues/new">bug report</a>.
+For more information about CodaLab, check out the <a href="https://github.com/codalab/codalab/wiki">wiki</a>.
