--- a/codalab/apps/web/templates/web/worksheets/index.html
+++ b/codalab/apps/web/templates/web/worksheets/index.html
@@ -1,4 +1,5 @@
-﻿{% extends 'base.html' %}
+﻿<!-- DEPRECATED -->
+{% extends 'base.html' %}
 {% block head_title %}Worksheets{% endblock head_title %}
 {% block page_title %}Worksheets{% endblock page_title %}
 
