minor tweak on command

--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -89,7 +89,7 @@
                   </blockquote>
                   <b>2. Run commands depending on previous bundles:</b>
                   <blockquote>
-                    <div class="frontpage_code">cl run :train.py 'python train.py' -n exp1</div>
+                    <div class="frontpage_code">cl run :train.py 'python train.py'</div>
                   </blockquote>
                   <b>3. Manage the runs / describe the results in the worksheet.</b>
                 </div>
