Use 'u' for uuid and 'a' for args

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -70,7 +70,10 @@
                       <td><kbd>enter</kbd></td><td>Open current bundle or worksheet</td>
                     </tr>
                     <tr>
-                        <td><kbd>t</kbd></td><td>Paste UUID of current bundle or worksheet into console</td>
+                        <td><kbd>u</kbd></td><td>Paste UUID of current bundle or worksheet into console</td>
+                    </tr>
+                    <tr>
+                        <td><kbd>a</kbd></td><td>Paste run arguments of current bundle into console</td>
                     </tr>
                     <tr>
                       <td><kbd>?</kbd></td><td>Show keyboard shortcut help</td>
