--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -70,10 +70,10 @@
                       <td><kbd>enter</kbd></td><td>Open current bundle or worksheet</td>
                     </tr>
                     <tr>
-                        <td><kbd>u</kbd></td><td>Paste UUID of current bundle or worksheet into console</td>
+                        <td><kbd>u</kbd></td><td>Paste UUID of current bundle or worksheet into web terminal</td>
                     </tr>
                     <tr>
-                        <td><kbd>a</kbd></td><td>Paste run arguments of current bundle into console</td>
+                        <td><kbd>a</kbd></td><td>Paste arguments to recreate current bundle into web terminal</td>
                     </tr>
                     <tr>
                       <td><kbd>?</kbd></td><td>Show keyboard shortcut help</td>
