--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -47,7 +47,11 @@
                 <div class="col-sm-6 worksheet-random-list">
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
                           <div class="btn-group" role="group">
+                            {% if user.is_authenticated %}
                                 <a role="button" class="btn" href="/worksheets/?name=/">My Worksheet</a>
+                            {% else %}
+                                <a role="button" class="btn" href="/accounts/login/?next=/worksheets/?name=/">My Worksheet (Sign In First)</a>
+                            {% endif %}
                           </div>
                     </div>
                     <p><strong>Create reproducible experiments in any
