--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -50,7 +50,7 @@
                             {% if user.is_authenticated %}
                                 <a role="button" class="btn" href="/worksheets/?name=/">My Worksheet</a>
                             {% else %}
-                                <a role="button" class="btn" href="/accounts/login/?next=/worksheets/?name=/">My Worksheet (Sign In First)</a>
+                                <a role="button" class="btn" href="/accounts/login/?next=/worksheets/?name=/">My Worksheet</a>
                             {% endif %}
                           </div>
                     </div>
