Change front page text

--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -98,7 +98,7 @@
 
             {% if ENABLE_COMPETITIONS %}
               <div class="col-sm-10 col-md-offset-1 competition-latest-list">
-                <h2 class="homepage_headers">Latest Competitions</h2>
+                <h2 class="homepage_headers">Popular Competitions</h2>
                 {% if not latest_competitions %}
                 <p><em>There are no competitions.</em></p>
                 {% else %}
