- Remove trailing slash in routers so loading HTML in api/filecontent view works. - Add sanitization to HTML (to avoid cross-site scripting attacks) in Markdown and HTML. - Deleted a lot of unused js/css files. - Cleanup the markdown/mathjax conversion code a bit.

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -98,6 +98,8 @@
             <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     {% endif %}
     <script src="{{ STATIC_URL }}js/vendor/marked.js"></script>
+    <script src="{{ STATIC_URL }}js/vendor/html4-defs.js"></script>
+    <script src="{{ STATIC_URL }}js/vendor/html-sanitizer.js"></script>
     <script src="{{ STATIC_URL }}js/vendor/underscore-min.js"></script>
     <script src="{{ STATIC_URL }}js/vendor/react-0.12.2.js"></script>
     <script src="{{ STATIC_URL }}js/vendor/jquery-editable-poshytip.js"></script>
