--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -101,12 +101,22 @@
             {% endif %}
 
             {% if ENABLE_COMPETITIONS %}
-              <div class="col-sm-10 col-md-offset-1 competition-latest-list">
+              <div class="col-sm-6 pull-left competition-latest-list">
                 <h2 class="homepage_headers">Popular Competitions</h2>
                 {% if not latest_competitions %}
                 <p><em>There are no competitions.</em></p>
                 {% else %}
                     {% for competition in latest_competitions %}
+                        {% include "web/competition_latest.html" with competition=competition %}
+                    {% endfor %}
+                {% endif %}
+              </div>
+                <div class="col-sm-6 pull-rigth competition-latest-list">
+                <h2 class="homepage_headers">Featured Competitions</h2>
+                {% if not latest_competitions %}
+                <p><em>There are no competitions.</em></p>
+                {% else %}
+                    {% for competition in featured_competitions %}
                         {% include "web/competition_latest.html" with competition=competition %}
                     {% endfor %}
                 {% endif %}
