--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -91,8 +91,8 @@
                           {% endif %}
                         {% endif %}
                         {% if ENABLE_COMPETITIONS %}
+                          <li><a href="https://worksheets-test.codalab.org/" tabIndex=2 target="_self">Worksheets</a></li>
                           <li class="{% active request '/my/' %}">
-
                               {% if user.is_authenticated %}
                                   <a href="/my">Search Competitions</a>
                               {% else %}
