--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -111,7 +111,7 @@
                     {% endfor %}
                 {% endif %}
               </div>
-                <div class="col-sm-6 pull-rigth competition-latest-list">
+                <div class="col-sm-6 pull-rigth">
                 <h2 class="homepage_headers">Featured Competitions</h2>
                 {% if not latest_competitions %}
                 <p><em>There are no competitions.</em></p>
