Removing another class

--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -101,7 +101,7 @@
             {% endif %}
 
             {% if ENABLE_COMPETITIONS %}
-              <div class="col-sm-6 pull-left competition-latest-list">
+              <div class="col-sm-6 competition-latest-list">
                 <h2 class="homepage_headers">Popular Competitions</h2>
                 {% if not latest_competitions %}
                 <p><em>There are no competitions.</em></p>
@@ -111,7 +111,7 @@
                     {% endfor %}
                 {% endif %}
               </div>
-                <div class="col-sm-6 pull-rigth">
+                <div class="col-sm-6 competition-latest-list">
                 <h2 class="homepage_headers">Featured Competitions</h2>
                 {% if not latest_competitions %}
                 <p><em>There are no competitions.</em></p>
